cs-new/Parser/Generated/MicroCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/sindrip/school/programanalysis/analysis-tool/cs-new/Parser/MicroC.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Parser.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class MicroCParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		INT=1, IF=2, ELSE=3, WHILE=4, READ=5, WRITE=6, TRUE=7, FALSE=8, NOT=9, 
		EQ=10, NOTEQ=11, LTEQ=12, GTEQ=13, ASSIGN=14, LT=15, GT=16, OR=17, AND=18, 
		PLUS=19, MINUS=20, MULT=21, DIV=22, MOD=23, LBRACE=24, RBRACE=25, LPAREN=26, 
		RPAREN=27, LBRACKET=28, RBRACKET=29, SEMICOLON=30, COMMA=31, DOT=32, NUMBER=33, 
		IDENT=34, WHITESPACE=35;
	public const int
		RULE_parse = 0, RULE_scopedBlock = 1, RULE_unscopedBlock = 2, RULE_declaration = 3, 
		RULE_fieldDeclaration = 4, RULE_statement = 5, RULE_a_expr = 6, RULE_b_expr = 7;
	public static readonly string[] ruleNames = {
		"parse", "scopedBlock", "unscopedBlock", "declaration", "fieldDeclaration", 
		"statement", "a_expr", "b_expr"
	};

	private static readonly string[] _LiteralNames = {
		null, "'int'", "'if'", "'else'", "'while'", "'read'", "'write'", "'true'", 
		"'false'", "'not'", "'=='", "'!='", "'<='", "'>='", "':='", "'<'", "'>'", 
		"'|'", "'&'", "'+'", "'-'", "'*'", "'/'", "'%'", "'{'", "'}'", "'('", 
		"')'", "'['", "']'", "';'", "','", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INT", "IF", "ELSE", "WHILE", "READ", "WRITE", "TRUE", "FALSE", 
		"NOT", "EQ", "NOTEQ", "LTEQ", "GTEQ", "ASSIGN", "LT", "GT", "OR", "AND", 
		"PLUS", "MINUS", "MULT", "DIV", "MOD", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
		"LBRACKET", "RBRACKET", "SEMICOLON", "COMMA", "DOT", "NUMBER", "IDENT", 
		"WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MicroC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MicroCParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MicroCParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MicroCParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ParseContext : ParserRuleContext {
		public ScopedBlockContext scopedBlock() {
			return GetRuleContext<ScopedBlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(MicroCParser.Eof, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parse; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterParse(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitParse(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParseContext parse() {
		ParseContext _localctx = new ParseContext(Context, State);
		EnterRule(_localctx, 0, RULE_parse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 16; scopedBlock();
			State = 17; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScopedBlockContext : ParserRuleContext {
		public ITerminalNode LBRACE() { return GetToken(MicroCParser.LBRACE, 0); }
		public ITerminalNode RBRACE() { return GetToken(MicroCParser.RBRACE, 0); }
		public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ScopedBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scopedBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterScopedBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitScopedBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScopedBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScopedBlockContext scopedBlock() {
		ScopedBlockContext _localctx = new ScopedBlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_scopedBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 19; Match(LBRACE);
			State = 23;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==INT || _la==LBRACE) {
				{
				{
				State = 20; declaration();
				}
				}
				State = 25;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 27;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 26; statement();
				}
				}
				State = 29;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << READ) | (1L << WRITE) | (1L << IDENT))) != 0) );
			State = 31; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnscopedBlockContext : ParserRuleContext {
		public ITerminalNode LBRACE() { return GetToken(MicroCParser.LBRACE, 0); }
		public ITerminalNode RBRACE() { return GetToken(MicroCParser.RBRACE, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public UnscopedBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unscopedBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterUnscopedBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitUnscopedBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnscopedBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnscopedBlockContext unscopedBlock() {
		UnscopedBlockContext _localctx = new UnscopedBlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_unscopedBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33; Match(LBRACE);
			State = 35;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 34; statement();
				}
				}
				State = 37;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << READ) | (1L << WRITE) | (1L << IDENT))) != 0) );
			State = 39; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
	 
		public DeclarationContext() { }
		public virtual void CopyFrom(DeclarationContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ArrayDeclContext : DeclarationContext {
		public ITerminalNode INT() { return GetToken(MicroCParser.INT, 0); }
		public ITerminalNode LBRACKET() { return GetToken(MicroCParser.LBRACKET, 0); }
		public ITerminalNode NUMBER() { return GetToken(MicroCParser.NUMBER, 0); }
		public ITerminalNode RBRACKET() { return GetToken(MicroCParser.RBRACKET, 0); }
		public ITerminalNode IDENT() { return GetToken(MicroCParser.IDENT, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(MicroCParser.SEMICOLON, 0); }
		public ArrayDeclContext(DeclarationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterArrayDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitArrayDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrayDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RecDeclContext : DeclarationContext {
		public IToken name;
		public ITerminalNode LBRACE() { return GetToken(MicroCParser.LBRACE, 0); }
		public FieldDeclarationContext[] fieldDeclaration() {
			return GetRuleContexts<FieldDeclarationContext>();
		}
		public FieldDeclarationContext fieldDeclaration(int i) {
			return GetRuleContext<FieldDeclarationContext>(i);
		}
		public ITerminalNode RBRACE() { return GetToken(MicroCParser.RBRACE, 0); }
		public ITerminalNode[] SEMICOLON() { return GetTokens(MicroCParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(MicroCParser.SEMICOLON, i);
		}
		public ITerminalNode IDENT() { return GetToken(MicroCParser.IDENT, 0); }
		public RecDeclContext(DeclarationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterRecDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitRecDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRecDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntDeclContext : DeclarationContext {
		public ITerminalNode INT() { return GetToken(MicroCParser.INT, 0); }
		public ITerminalNode IDENT() { return GetToken(MicroCParser.IDENT, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(MicroCParser.SEMICOLON, 0); }
		public IntDeclContext(DeclarationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterIntDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitIntDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			State = 63;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new IntDeclContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 41; Match(INT);
				State = 42; Match(IDENT);
				State = 43; Match(SEMICOLON);
				}
				break;
			case 2:
				_localctx = new ArrayDeclContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 44; Match(INT);
				State = 45; Match(LBRACKET);
				State = 46; Match(NUMBER);
				State = 47; Match(RBRACKET);
				State = 48; Match(IDENT);
				State = 49; Match(SEMICOLON);
				}
				break;
			case 3:
				_localctx = new RecDeclContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 50; Match(LBRACE);
				State = 51; fieldDeclaration();
				State = 56;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==SEMICOLON) {
					{
					{
					State = 52; Match(SEMICOLON);
					State = 53; fieldDeclaration();
					}
					}
					State = 58;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 59; Match(RBRACE);
				State = 60; ((RecDeclContext)_localctx).name = Match(IDENT);
				State = 61; Match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldDeclarationContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(MicroCParser.INT, 0); }
		public ITerminalNode IDENT() { return GetToken(MicroCParser.IDENT, 0); }
		public FieldDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fieldDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterFieldDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitFieldDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFieldDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FieldDeclarationContext fieldDeclaration() {
		FieldDeclarationContext _localctx = new FieldDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_fieldDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65; Match(INT);
			State = 66; Match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AssignArrayStmtContext : StatementContext {
		public A_exprContext index;
		public A_exprContext value;
		public ITerminalNode IDENT() { return GetToken(MicroCParser.IDENT, 0); }
		public ITerminalNode LBRACKET() { return GetToken(MicroCParser.LBRACKET, 0); }
		public ITerminalNode RBRACKET() { return GetToken(MicroCParser.RBRACKET, 0); }
		public ITerminalNode ASSIGN() { return GetToken(MicroCParser.ASSIGN, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(MicroCParser.SEMICOLON, 0); }
		public A_exprContext[] a_expr() {
			return GetRuleContexts<A_exprContext>();
		}
		public A_exprContext a_expr(int i) {
			return GetRuleContext<A_exprContext>(i);
		}
		public AssignArrayStmtContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterAssignArrayStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitAssignArrayStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignArrayStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignRecStmtContext : StatementContext {
		public ITerminalNode IDENT() { return GetToken(MicroCParser.IDENT, 0); }
		public ITerminalNode ASSIGN() { return GetToken(MicroCParser.ASSIGN, 0); }
		public ITerminalNode LPAREN() { return GetToken(MicroCParser.LPAREN, 0); }
		public A_exprContext[] a_expr() {
			return GetRuleContexts<A_exprContext>();
		}
		public A_exprContext a_expr(int i) {
			return GetRuleContext<A_exprContext>(i);
		}
		public ITerminalNode RPAREN() { return GetToken(MicroCParser.RPAREN, 0); }
		public ITerminalNode[] COMMA() { return GetTokens(MicroCParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(MicroCParser.COMMA, i);
		}
		public AssignRecStmtContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterAssignRecStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitAssignRecStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignRecStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhileStmtContext : StatementContext {
		public ITerminalNode WHILE() { return GetToken(MicroCParser.WHILE, 0); }
		public ITerminalNode LPAREN() { return GetToken(MicroCParser.LPAREN, 0); }
		public B_exprContext b_expr() {
			return GetRuleContext<B_exprContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(MicroCParser.RPAREN, 0); }
		public UnscopedBlockContext unscopedBlock() {
			return GetRuleContext<UnscopedBlockContext>(0);
		}
		public WhileStmtContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterWhileStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitWhileStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfStmtContext : StatementContext {
		public ITerminalNode IF() { return GetToken(MicroCParser.IF, 0); }
		public ITerminalNode LPAREN() { return GetToken(MicroCParser.LPAREN, 0); }
		public B_exprContext b_expr() {
			return GetRuleContext<B_exprContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(MicroCParser.RPAREN, 0); }
		public UnscopedBlockContext unscopedBlock() {
			return GetRuleContext<UnscopedBlockContext>(0);
		}
		public IfStmtContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterIfStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitIfStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ReadStmtContext : StatementContext {
		public ITerminalNode READ() { return GetToken(MicroCParser.READ, 0); }
		public ITerminalNode IDENT() { return GetToken(MicroCParser.IDENT, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(MicroCParser.SEMICOLON, 0); }
		public ReadStmtContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterReadStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitReadStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReadStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfElseStmtContext : StatementContext {
		public UnscopedBlockContext ifBody;
		public UnscopedBlockContext elseBody;
		public ITerminalNode IF() { return GetToken(MicroCParser.IF, 0); }
		public ITerminalNode LPAREN() { return GetToken(MicroCParser.LPAREN, 0); }
		public B_exprContext b_expr() {
			return GetRuleContext<B_exprContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(MicroCParser.RPAREN, 0); }
		public ITerminalNode ELSE() { return GetToken(MicroCParser.ELSE, 0); }
		public UnscopedBlockContext[] unscopedBlock() {
			return GetRuleContexts<UnscopedBlockContext>();
		}
		public UnscopedBlockContext unscopedBlock(int i) {
			return GetRuleContext<UnscopedBlockContext>(i);
		}
		public IfElseStmtContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterIfElseStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitIfElseStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfElseStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignStmtContext : StatementContext {
		public ITerminalNode IDENT() { return GetToken(MicroCParser.IDENT, 0); }
		public ITerminalNode ASSIGN() { return GetToken(MicroCParser.ASSIGN, 0); }
		public A_exprContext a_expr() {
			return GetRuleContext<A_exprContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(MicroCParser.SEMICOLON, 0); }
		public AssignStmtContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterAssignStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitAssignStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignFieldStmtContext : StatementContext {
		public IToken name;
		public IToken field;
		public ITerminalNode DOT() { return GetToken(MicroCParser.DOT, 0); }
		public ITerminalNode ASSIGN() { return GetToken(MicroCParser.ASSIGN, 0); }
		public A_exprContext a_expr() {
			return GetRuleContext<A_exprContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(MicroCParser.SEMICOLON, 0); }
		public ITerminalNode[] IDENT() { return GetTokens(MicroCParser.IDENT); }
		public ITerminalNode IDENT(int i) {
			return GetToken(MicroCParser.IDENT, i);
		}
		public AssignFieldStmtContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterAssignFieldStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.ExitAssignFieldStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMicroCVisitor<TResult> typedVisitor = visitor as IMicroCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignFieldStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WriteStmtContext : StatementContext {
		public ITerminalNode WRITE() { return GetToken(MicroCParser.WRITE, 0); }
		public A_exprContext a_expr() {
			return GetRuleContext<A_exprContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(MicroCParser.SEMICOLON, 0); }
		public WriteStmtContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
			if (typedListener != null) typedListener.EnterWriteStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMicroCListener typedListener = listener as IMicroCListener;
